[package]
name = "yil"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.1.3"
pest_derive = "2.1"
clap = "2.33.3"
lexpr = "0.2.5"
tempfile = "3"
itertools = "0.10"
once_cell = "1.8.0"
z3 = "0.11.2"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm12-0"] }