[package]
name = "yil"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.1.3"
pest_derive = "2.1"
clap = "2.33.3"
lexpr = "0.2.5"
tempfile = "3"
itertools = "0.10"
once_cell = "1.8.0"
z3 = "0.11.2"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm12-0"] }
log = "0.4.0"
simplelog = "0.11.1"
serde = "1.0.89"
serde_json = "1.0"
serde_derive = "1.0"
lsp-server = "0.6.0"
lsp-types = "0.93.0"